--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -1,4 +1,6 @@
-<webcam [height]="500" [width]="500" (initError)="handleInitError($event)" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"></webcam>
+<button class="actionBtn" (click)="webCamEnable();">Take A Snapshot</button>
+
+<webcam *ngIf="showWebcam" [height]="500" [width]="500" (initError)="handleInitError($event)" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"></webcam>
 <!-- Button Takes Photo -->
 <button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
 <!-- Snapshot Div where image will be shown -->
