--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -1,10 +1,34 @@
-<button class="actionBtn" (click)="webCamEnable();">Take A Snapshot</button>
+<!-- <div style="height:100vh; width:100vw;" class="row fullscreen align-items-center justify-content-center">
+    <div class="col">
+      <button class="actionBtn" (click)="webCamEnable();">Browse From Camera</button>
 
-<webcam *ngIf="showWebcam" [height]="500" [width]="500" (initError)="handleInitError($event)" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"></webcam>
-<!-- Button Takes Photo -->
-<button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
-<!-- Snapshot Div where image will be shown -->
-<div class="snapshot" *ngIf="webcamImage">
-  <h2>Take your image or get another</h2>
-  <img [src]="webcamImage.imageAsDataUrl"/>
+      <!-- Button Takes Photo -->
+      <!-- <button class="actionBtn" *ngIf="showWebcam" (click)="triggerSnapshot();">Take A Snapshot</button> -->
+      <!-- Snapshot Div where image will be shown -->
+      <!-- <div class="snapshot" *ngIf="webcamImage">
+        <p>Take your image or get another</p>
+        <img [src]="webcamImage.imageAsDataUrl"/>
+      </div>
+    </div>
+</div> -->
+
+<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
+
+    <h1>Title</h1>
+
+    <div class="form-group" style="padding: 10px;" >
+      <label for="exampleNameEmail">Name: </label>
+      <input class="form-control" [(ngModel)]="name" placeholder="Enter Name">
+    </div>
+
+    <button  (click)="webCamEnable();" class="btn btn-primary">Browse Picture From Camera</button>
+    <webcam *ngIf="showWebcam" [height]="500" [width]="500" (initError)="handleInitError($event)" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"></webcam>
+    <button class="btn btn-primary" *ngIf="showWebcam" (click)="triggerSnapshot();">Take A Snapshot</button>
+
+    <div class="snapshot" *ngIf="webcamImage">
+      <p>Take your image or get another</p>
+      <img [src]="webcamImage.imageAsDataUrl"/>
+      <button class="btn btn-primary" *ngIf="showWebcam" (click)="onSubmit(webcamImage);">submit</button>
+    </div>
+
 </div>
