--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -30,5 +30,7 @@
       <img [src]="webcamImage.imageAsDataUrl"/>
       <button class="btn btn-primary" *ngIf="showWebcam" (click)="onSubmit(webcamImage);">submit</button>
     </div>
+      <br>
+    <img src="data2" *ngIf="FromFireStoreTest" alt="">
 
 </div>
