--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -32,7 +32,7 @@
       <br>
       <br>
 
-      <button class="btn btn-primary" *ngIf="showWebcam" (click)="onSubmit(webcamImage);">submit</button>
- 
+      <button *ngIf="showProcessing == false && showWebcam" class="btn btn-primary"  (click)="onSubmit(webcamImage);"> Submit</button>
+      <h3 *ngIf="showProcessing"> Processing Please wait </h3>
 
 </div>
